--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+datasets/KITTI/testing/
+datasets/KITTI/val/
+datasets/KITTI/train/
 MANIFEST
 
 # PyInstaller
